# cursormatrix

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.circleci/: config.yml
.github/workflows/: release.yml  rust.yml
examples/: debug.rs  filter.rs  minieditor.rs
src/: cmx.rs  cursormatrix.rs  events.rs  lib.rs  rustfmt.toml  terminal.rs
src/core/: cursor.rs  matrix.rs  mod.rs  rune.rs  size.rs  terminfo.rs  termios.rs  tty.rs
