[package]
name = "cursormatrix"
version = "0.1.0"
authors = ["Yasuyuki YAMADA <yasuyuki.ymd@gmail.com>"]
edition = '2018'
license = "MIT"
repository = "https://github.com/yasuyuky/cursormatrix"
description = "Simple and naive TUI Library for Rust"

[dependencies]
term = "0.7"
termios = "0.3"
libc = "0.2"
lazy_static = "1.0"
crossbeam = "0.8"
unicode-width = "0.1"
unicode-normalization = "0.1"
colored = "2.0"
